--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -2,4 +2,10 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p You are about to be redirected to #{url}
+  form#PS_SIGNON(method='POST' action='#{url}')
+      input#JWT(type='hidden' name='JWT' value='#{token}')
+block scripts
+   script(src='/js/index.js')
+
+
